banner section done + few common style added

--- a/index.html
+++ b/index.html
@@ -7,11 +7,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Responsive Football</title>
-
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+          integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- CSS -->
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <h1> Hello Word!! </h1>
+<!-- Banner Section -->
+<div class="banner">
+    <div class="container">
+        <div class="banner-content flex">
+            <div class="half-width text-left">
+                <h1 class="title"> Conmebol <br> Copa America <br> 2021 </h1>
+                <a href="https://www.youtube.com/channel/UCCidr-29PQ7e_uMaRy5Cmag" target="_blank" class="btn ">watch-live
+                    <i class="fas fa-angle-right"></i> </a>
+            </div>
+            <div class="half-width">
+                <img src="assets/img/banner.png" alt="banner img">
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
