--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <i class="fas fa-angle-right"></i> </a>
             </div>
             <div class="half-width">
-                <img src="assets/img/banner.png" alt="banner img">
+                <img src="assets/img/banner.png" class="zoom" alt="banner img">
             </div>
         </div>
     </div>
