--- a/index.html
+++ b/index.html
@@ -31,5 +31,73 @@
         </div>
     </div>
 </div>
+
+<!-- Players -->
+
+<div class="container">
+    <div class="players grid">
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+            <div class="sm-title">Neymar Jr</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
