--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <!-- Players -->
 
 <div class="container">
+    <section class="players-container">
     <div class="players grid">
         <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
             <div class="sm-title">Neymar Jr</div>
@@ -85,6 +86,7 @@
             <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for La Liga club Barcelona and the Brazil national team. He is known for his combination of vision, passing, dribbling and ability to conjure curving long-range strikes.</p>
         </div>
     </div>
+    </section>
 </div>
 
 </body>
