--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 </div>
 
 <!-- Players -->
-
 <div class="container">
     <section class="players-container">
     <div class="players grid">
@@ -87,6 +86,24 @@
         </div>
     </div>
     </section>
+</div>
+
+<!-- Match Info Section -->
+<div class="match-info">
+    <div class="container">
+        <div class="grid">
+            <div class="half-width">
+                <h2 class="title"> All Highlights Copa <br> America 2021 </h2>
+                <p> He made his debut for the Qatar national football team during the 9th International Friendship Tournament held in December 2009.
+                    <br>
+                    <br>
+                    Hatem participated for the Qatar olympic team in the 2012 Summer Olympic qualifiers. He received 2 yellow cards during the group stage, rendering him ineligible to compete for one game. Qatar, however, chose to play him against Oman, resulting in FIFA overturning the 1–1 draw to a 3–0 loss for Qatar. This meant that Qatar, who were undefeated in the group stage, would end up third in the group while Oman and South Korea went through to the next stage. </p>
+            </div>
+            <div class="half-width">
+                <img src="assets/img/match.png" alt="Match Info">
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
