--- a/index.html
+++ b/index.html
@@ -35,56 +35,76 @@
 <!-- Players -->
 <div class="container">
     <section class="players-container">
-    <div class="players grid">
-        <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
-            <div class="sm-title">Neymar Jr</div>
-            <p>Moving on to his personal life and affairs, he is not married but is in a relationship with his girlfriend Bruna Marquezine. The couple is dating each other since 2013.</p>
+        <div class="players grid">
+            <div class="player"><img src="assets/img/players/player-1.png" alt="Player">
+                <div class="sm-title">Neymar Jr</div>
+                <p>Moving on to his personal life and affairs, he is not married but is in a relationship with his
+                    girlfriend Bruna Marquezine. The couple is dating each other since 2013.</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-2.png" alt="Player">
+                <div class="sm-title">Lionel Messi</div>
+                <p>Barcelona have announced that Lionel Messi is leaving the club after “financial and structural
+                    obstacles” made it impossible to renew his contract. The forward, who has spent his whole career
+                    there, had been expected to re-sign after his deal expired in June.</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-3.png" alt="Player">
+                <div class="sm-title">Cristiano Ronaldo</div>
+                <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a
+                    forward for Serie A club Juventus and captains the Portugal national team.</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-4.png" alt="Player">
+                <div class="sm-title">Paulo Dybala</div>
+                <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A club
+                    Juventus and the Argentina national team.</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-5.png" alt="Player">
+                <div class="sm-title">Mesut Ozil</div>
+                <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig
+                    club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills, creativity,
+                    agility, and finesse. He has also played as a wide midfielder in his career.</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-6.png" alt="Player">
+                <div class="sm-title">Mauro Icardi</div>
+                <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club
+                    Paris Saint-Germain and the Argentina national team.</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-7.png" alt="Player">
+                <div class="sm-title">Di Maria</div>
+                <p>Ángel Fabián di María is an Argentine professional footballer who plays for Ligue 1 club Paris
+                    Saint-Germain and the Argentina national team. He can play as either a winger or attacking
+                    midfielder.</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-8.png" alt="Player">
+                <div class="sm-title">Kylian Mbappé</div>
+                <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club
+                    Paris Saint-Germain and the France national team. Mbappé began his senior career with Ligue 1 club
+                    Monaco, making his professional debut in 2015, aged 16</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-9.png" alt="Player">
+                <div class="sm-title">Mohamed Salah</div>
+                <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for
+                    Premier League club Liverpool and captains the Egypt national team. Considered one of the best
+                    players in the world, he is known for his finishing, dribbling, and speed.</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-10.png" alt="Player">
+                <div class="sm-title">Harry Kane</div>
+                <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League
+                    club Tottenham Hotspur and captains the England national team. Regarded as one of the best strikers
+                    in the world, Kane is known for his prolific goalscoring record and ability to link play.</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-11.png" alt="Player">
+                <div class="sm-title">Kevin De Bruyne</div>
+                <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League
+                    club Manchester City, where he is vice-captain, and the Belgium national team. De Bruyne began his
+                    career at Genk, where he was a regular player when they won the 2010–11 Belgian Pro League.</p>
+            </div>
+            <div class="player"><img src="assets/img/players/player-12.png" alt="Player">
+                <div class="sm-title">Philippe Coutinho</div>
+                <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder
+                    or winger for La Liga club Barcelona and the Brazil national team. He is known for his combination
+                    of vision, passing, dribbling and ability to conjure curving long-range strikes.</p>
+            </div>
         </div>
-        <div class="player"><img src="assets/img/players/player-2.png" alt="Player">
-            <div class="sm-title">Lionel Messi</div>
-            <p>Barcelona have announced that Lionel Messi is leaving the club after “financial and structural obstacles” made it impossible to renew his contract. The forward, who has spent his whole career there, had been expected to re-sign after his deal expired in June.</p>
-        </div>
-        <div class="player"><img src="assets/img/players/player-3.png" alt="Player">
-            <div class="sm-title">Cristiano Ronaldo</div>
-            <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-        </div>
-        <div class="player"><img src="assets/img/players/player-4.png" alt="Player">
-            <div class="sm-title">Paulo Dybala</div>
-            <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
-        </div>
-        <div class="player"><img src="assets/img/players/player-5.png" alt="Player">
-            <div class="sm-title">Mesut Ozil</div>
-            <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills, creativity, agility, and finesse. He has also played as a wide midfielder in his career.</p>
-        </div>
-        <div class="player"><img src="assets/img/players/player-6.png" alt="Player">
-            <div class="sm-title">Mauro Icardi</div>
-            <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
-        </div>
-        <div class="player"><img src="assets/img/players/player-7.png" alt="Player">
-            <div class="sm-title">Di Maria</div>
-            <p>Ángel Fabián di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder.</p>
-        </div>
-        <div class="player"><img src="assets/img/players/player-8.png" alt="Player">
-            <div class="sm-title">Kylian Mbappé</div>
-            <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team. Mbappé began his senior career with Ligue 1 club Monaco, making his professional debut in 2015, aged 16</p>
-        </div>
-        <div class="player"><img src="assets/img/players/player-9.png" alt="Player">
-            <div class="sm-title">Mohamed Salah</div>
-            <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team. Considered one of the best players in the world, he is known for his finishing, dribbling, and speed.</p>
-        </div>
-        <div class="player"><img src="assets/img/players/player-10.png" alt="Player">
-            <div class="sm-title">Harry Kane</div>
-            <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team. Regarded as one of the best strikers in the world, Kane is known for his prolific goalscoring record and ability to link play.</p>
-        </div>
-        <div class="player"><img src="assets/img/players/player-11.png" alt="Player">
-            <div class="sm-title">Kevin De Bruyne</div>
-            <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team. De Bruyne began his career at Genk, where he was a regular player when they won the 2010–11 Belgian Pro League.</p>
-        </div>
-        <div class="player"><img src="assets/img/players/player-12.png" alt="Player">
-            <div class="sm-title">Philippe Coutinho</div>
-            <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for La Liga club Barcelona and the Brazil national team. He is known for his combination of vision, passing, dribbling and ability to conjure curving long-range strikes.</p>
-        </div>
-    </div>
     </section>
 </div>
 
@@ -94,15 +114,27 @@
         <div class="grid">
             <div class="half-width">
                 <h2 class="title"> All Highlights Copa <br> America 2021 </h2>
-                <p> He made his debut for the Qatar national football team during the 9th International Friendship Tournament held in December 2009.
+                <p> He made his debut for the Qatar national football team during the 9th International Friendship
+                    Tournament held in December 2009.
                     <br>
                     <br>
-                    Hatem participated for the Qatar olympic team in the 2012 Summer Olympic qualifiers. He received 2 yellow cards during the group stage, rendering him ineligible to compete for one game. Qatar, however, chose to play him against Oman, resulting in FIFA overturning the 1–1 draw to a 3–0 loss for Qatar. This meant that Qatar, who were undefeated in the group stage, would end up third in the group while Oman and South Korea went through to the next stage. </p>
+                    Hatem participated for the Qatar olympic team in the 2012 Summer Olympic qualifiers. He received 2
+                    yellow cards during the group stage, rendering him ineligible to compete for one game. Qatar,
+                    however, chose to play him against Oman, resulting in FIFA overturning the 1–1 draw to a 3–0 loss
+                    for Qatar. This meant that Qatar, who were undefeated in the group stage, would end up third in the
+                    group while Oman and South Korea went through to the next stage. </p>
             </div>
             <div class="half-width">
                 <img src="assets/img/match.png" alt="Match Info">
             </div>
         </div>
+    </div>
+</div>
+
+<!-- Footer Img Section -->
+<div class="container">
+    <div class="footer-img flex">
+        <img src="assets/img/logo.png" alt="logo">
     </div>
 </div>
 
