--- a/index.html
+++ b/index.html
@@ -138,5 +138,15 @@
     </div>
 </div>
 
+<!-- Footer Icon Section -->
+<div class="container">
+    <div class="footer-icon flex">
+        <li><a href=""><i class="fab fa-twitter"></i></a></li>
+        <li><a href=""><i class="fas fa-basketball-ball"></i></a></li>
+        <li><a href=""><i class="fab fa-instagram"></i></a></li>
+        <li><a href=""><i class="fab fa-youtube"></i></a></li>
+    </div>
+</div>
+
 </body>
 </html>
