Copyright Section Done

--- a/index.html
+++ b/index.html
@@ -148,5 +148,12 @@
     </div>
 </div>
 
+<!-- Footer Copyright Section -->
+<div class="container">
+    <div class="copyright">
+        <p> Copyright &copy; 2022 <a href="#!" target="_blank"> Football </a>  </p>
+    </div>
+</div>
+
 </body>
 </html>
