--- a/index.html
+++ b/index.html
@@ -15,6 +15,30 @@
 </head>
 <body>
 
+<!-- Navbar -->
+<header>
+    <div class="container">
+        <div class="navbar">
+            <!-- Create Toggle Button -->
+            <input type="checkbox" id="chk">
+            <label for="chk" class="chk-btn">
+                <img src="assets/img/bars.svg" alt="Toggle Button">
+            </label>
+
+            <ul class="menu">
+                <li><a href="#!"> Home </a></li>
+                <li><a href="#!"> Club </a></li>
+                <li><a href="#!"> World Cup 2023 </a></li>
+                <li><a href="#!"> Upcoming Matches </a></li>
+                <li><a href="#!"> Contact </a></li>
+            </ul>
+            <ul class="menu logout">
+                <li><a href="#!" class="btn"> <i class="fas fa-sign-out-alt"></i> Login </a></li>
+            </ul>
+        </div>
+    </div>
+</header>
+
 <!-- Banner Section -->
 <div class="banner">
     <div class="container">
