--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Responsive Football</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-          integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+          integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- CSS -->
     <link rel="stylesheet" href="assets/style.css">
 </head>
@@ -154,6 +155,31 @@
     </div>
 </div>
 
+<!-- Live Stream -->
+<div class="live flex">
+    <div class="container">
+        <h2 class="title t-name"> Live Show </h2>
+        <div class="live-content grid">
+            <div class="half-width">
+                <img src="assets/img/macbook.png" alt="macbook">
+            </div>
+            <div class="half-width">
+                <div class="live-palyer-text">
+                    <h2 class="title"> Live </h2>
+                    <h2 class="title"> Stream </h2>
+                    <h2 class="title"> Football Match </h2>
+                    <h2 class="title"> Copa America 2021 </h2>
+                </div>
+                <div class="live-palyer">
+                    <div class="video-ply-btn">
+                        <a class="popup-video mfp-iframe" href="#!" target="_blank"><i class="fas fa-play"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Footer Img Section -->
 <div class="container">
     <div class="footer-img flex">
@@ -174,7 +200,7 @@
 <!-- Footer Copyright Section -->
 <div class="container">
     <div class="copyright">
-        <p> Copyright &copy; 2022 <a href="#!" target="_blank"> Football </a>  </p>
+        <p> Copyright &copy; 2022 <a href="#!" target="_blank"> Football </a></p>
     </div>
 </div>
 
