--- a/index.html
+++ b/index.html
@@ -180,6 +180,68 @@
     </div>
 </div>
 
+<!-- Contact Section -->
+<div class="container">
+    <div class="contact">
+        <!-- Box -->
+        <div class="box">
+            <!-- info container -->
+            <section class="info">
+                <h4 class="sm-title">Contact Us</h4>
+                <p>
+                    <i class="fas fa-road"></i>
+                    <small>44 something st</small>
+                </p>
+                <p>
+                    <i class="fas fa-phone-alt"></i>
+                    <small>(666) 666-6666</small>
+                </p>
+                <p>
+                    <i class="fas fa-envelope"></i>
+                    <small>something@gmail.com</small>
+                </p>
+            </section>
+            <!-- form container -->
+            <form>
+                <!-- Name -->
+                <div class="name">
+                    <label for="name">Name</label>
+                    <br>
+                    <input type="text" id="name" required>
+                </div>
+                <!-- Company -->
+                <div class="company">
+                    <label for="company">Company</label>
+                    <br>
+                    <input type="text" id="company" required>
+                </div>
+                <!-- Email -->
+                <div class="email">
+                    <label for="email">Email</label>
+                    <br>
+                    <input type="email" id="email" required>
+                </div>
+                <!-- Telephone -->
+                <div class="tele">
+                    <label for="telephone">Phone Number</label>
+                    <br>
+                    <input type="tel" id="telephone" required>
+                </div>
+                <!-- Message -->
+                <div class="message">
+                    <label for="message">Message</label>
+                    <br>
+                    <textarea id="message"></textarea>
+                </div>
+                <!-- Submit -->
+                <div class="submit">
+                    <input type="submit" value="SUBMIT">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <!-- Footer Img Section -->
 <div class="container">
     <div class="footer-img flex">
