site style few modify

--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
             <section class="info">
                 <h4 class="sm-title">Contact Us</h4>
                 <p>
-                    <i class="fas fa-road"></i>
-                    <small>44 something st</small>
-                </p>
-                <p>
                     <i class="fas fa-phone-alt"></i>
                     <small>(666) 666-6666</small>
+                </p>
+                <p>
+                    <i class="far fa-address-card"></i>
+                    <small>Catherine W Calloway</small>
                 </p>
                 <p>
                     <i class="fas fa-envelope"></i>
